tests/maistra/testdata/httpbin/networking/httpbin-ocp-route-https.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpbin.example.com
  namespace: istio-system
spec:
  host: httpbin.example.com
  port:
    targetPort: https
  to:
    kind: Service
    name: istio-ingressgateway
  tls:
    termination: passthrough
